btsk-86: 대시보드 api  (#113)
* btsk-86: 대시보드 api 제작 및 테스트코드 수정

Signed-off-by: Hyeonjun0527 <osumaniaddict527@gmail.com>

* btsk-86: 잘못된 폴더구조 수정

Signed-off-by: Hyeonjun0527 <osumaniaddict527@gmail.com>

* btsk-86: 폴더명변경

Signed-off-by: Hyeonjun0527 <osumaniaddict527@gmail.com>

* btsk-86: 대시보드 api 제작

* btsk-86: 클래스명 변경

* btsk-86: valid 어노테이션 적용

* btsk-86: 코드스타일 수정

Signed-off-by: Hyeonjun0527 <osumaniaddict527@gmail.com>

* btsk-86: 마이그레이션 api

* btsk-86: 버그 잡기, 로그 숨기기

* btsk-86: 로그 색 변경

* btsk-86: 코드스타일 적용

* btsk-86: 테스트 코드 에러 해결

---------

Signed-off-by: Hyeonjun0527 <osumaniaddict527@gmail.com>