@@ -1,6 +1,7 @@
 // 프로젝트 플러그인 설정
 plugins {
     id 'java'
+    id 'groovy'
     id 'org.springframework.boot' version '3.5.5'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.diffplug.spotless' version "7.2.1"
@@ -138,6 +139,7 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'io.sentry:sentry-log4j2:8.22.0'
     implementation 'io.sentry:sentry-logback:8.22.0'
+    implementation 'org.apache.groovy:groovy:4.0.21'
 
     // 테스트 의존성
     testCompileOnly 'org.projectlombok:lombok'
@@ -162,6 +164,7 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
     environment 'AWS_REGION', 'ap-northeast-2'
+    jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 }
 
 // JaCoCo 설정
